--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,5 @@
     <string name="dashboard_greeting_good_morning">Good Morning</string>
     <string name="dashboard_greeting_good_afternoon">Good Afternoon</string>
     <string name="dashboard_greeting_good_evening">Good Evening</string>
+    <string name="cart">Cart</string>
 </resources>
